# omnihive

./: Cargo.toml  README.md
.github/workflows/: ci.yml
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: bootstrap.rs  mcp.rs  memory.rs  mod.rs  provider_detect.rs  provider_presets.rs  repo_manager.rs  settings.rs  skill_manager.rs  system.rs
app/src-tauri/src/commands/runtime/: credentials.rs  cycle_executor.rs  loop_manager.rs  mod.rs  prompt_builder.rs  status.rs
app/src-tauri/src/engine/: api_client.rs  bootstrap.rs  checkpoint.rs  extract.rs  generator.rs  guardrails.rs  logging.rs  memory.rs  mod.rs  policy_engine.rs  retry.rs  state.rs  state_machine.rs  task_model.rs
app/src-tauri/src/models/: config.rs
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs
crates/omnihive-core/: Cargo.toml
crates/omnihive-core/src/: checkpoint.rs  eval.rs  guardrails.rs  lib.rs  policy_engine.rs  runner.rs  task_model.rs  tool_protocol.rs  trace_export.rs  types.rs
crates/omnihive-core/src/tools/: filesystem.rs  github.rs  mod.rs  shell.rs
docs/adr/: ADR-001-architecture-boundaries.md
docs/architecture/: layers.md
schemas/: policy.schema.json  step.schema.json  task.schema.json  tool.schema.json  trace.schema.json
