[package]
name = "omnihive-core"
version = "0.1.0"
edition = "2021"
description = "Core execution control plane for Omnihive"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
sha2 = "0.10"
tracing = "0.1"
